--- a/gdpr-sinottico-it-en.html
+++ b/gdpr-sinottico-it-en.html
@@ -1011,7 +1011,25 @@
 
 
 		<!-- Art. 12 ENG -->
-		<div id="eng-12" class="grid-item-eng" style="grid-row-start:13">			
+		<div id="eng-12" class="grid-item-eng" style="grid-row-start:13">	
+			<h2>Article 12 &mdash; Transparent information, communication and modalities for the exercise of the rights of the data subject</h2>
+
+			<ol>
+					<li>The controller shall take appropriate measures to provide any information referred to in Articles 13 and 14 and any communication under Articles 15 to 22 and 34 relating to processing to the data subject in a concise, transparent, intelligible and easily accessible form, using clear and plain language, in particular for any information addressed specifically to a child. The information shall be provided in writing, or by other means, including, where appropriate, by electronic means. When requested by the data subject, the information may be provided orally, provided that the identity of the data subject is proven by other means.</li>
+					<li>The controller shall facilitate the exercise of data subject rights under Articles 15 to 22. In the cases referred to in Article 11(2), the controller shall not refuse to act on the request of the data subject for exercising his or her rights under Articles 15 to 22, unless the controller demonstrates that it is not in a position to identify the data subject.</li>
+					<li>The controller shall provide information on action taken on a request under Articles 15 to 22 to the data subject without undue delay and in any event within one month of receipt of the request. That period may be extended by two further months where necessary, taking into account the complexity and number of the requests. The controller shall inform the data subject of any such extension within one month of receipt of the request, together with the reasons for the delay. Where the data subject makes the request by electronic form means, the information shall be provided by electronic means where possible, unless otherwise requested by the data subject.</li>
+					<li>If the controller does not take action on the request of the data subject, the controller shall inform the data subject without delay and at the latest within one month of receipt of the request of the reasons for not taking action and on the possibility of lodging a complaint with a supervisory authority and seeking a judicial remedy.</li>
+					<li>Information provided under Articles 13 and 14 and any communication and any actions taken under Articles 15 to 22 and 34 shall be provided free of charge. Where requests from a data subject are manifestly unfounded or excessive, in particular because of their repetitive character, the controller may either:
+						<ol style="list-style-type: lower-alpha;">
+							<li>charge a reasonable fee taking into account the administrative costs of providing the information or communication or taking the action requested; or</li>
+							<li>refuse to act on the request.</li>
+						</ol>
+						The controller shall bear the burden of demonstrating the manifestly unfounded or excessive character of the request.
+					</li>
+					<li>Without prejudice to Article 11, where the controller has reasonable doubts concerning the identity of the natural person making the request referred to in Articles 15 to 21, the controller may request the provision of additional information necessary to confirm the identity of the data subject.</li>
+					<li>The information to be provided to data subjects pursuant to Articles 13 and 14 may be provided in combination with standardised icons in order to give in an easily visible, intelligible and clearly legible manner a meaningful overview of the intended processing. Where the icons are presented electronically they shall be machine-readable.</li>
+					<li>The Commission shall be empowered to adopt delegated acts in accordance with Article 92 for the purpose of determining the information to be presented by the icons and the procedures for providing standardised icons.</li>
+			</ol>
 		</div>
 
 <!-- ............. -->
@@ -1053,7 +1071,44 @@
 
 
 		<!-- Art. 13 ENG -->
-		<div id="eng-13" class="grid-item-eng" style="grid-row-start:14">			
+		<div id="eng-13" class="grid-item-eng" style="grid-row-start:14">
+			<h2>Article 13 &mdash; Information to be provided where personal data are collected from the data subject</h2>	
+
+			<ol>
+				<li>Where personal data relating to a data subject are collected from the data subject, the controller shall, at the time when personal data are obtained, provide the data subject with all of the following information:
+					<ol style="list-style-type: lower-alpha;">
+						<li>the identity and the contact details of the controller and, where applicable, of the controller's representative;</li>
+
+						<li>the contact details of the data protection officer, where applicable;</li>
+
+						<li>the purposes of the processing for which the personal data are intended as well as the legal basis for the processing;</li>
+
+						<li>where the processing is based on point (f) of Article 6(1), the legitimate interests pursued by the controller or by a third party;</li>
+
+						<li>the recipients or categories of recipients of the personal data, if any;</li>
+
+						<li>where applicable, the fact that the controller intends to transfer personal data to a third country or international organisation and the existence or absence of an adequacy decision by the Commission, or in the case of transfers referred to in Article 46 or 47, or the second subparagraph of Article 49(1), reference to the appropriate or suitable safeguards and the means by which to obtain a copy of them or where they have been made available.</li>
+					</ol>
+
+				<li>In addition to the information referred to in paragraph 1, the controller shall, at the time when personal data are obtained, provide the data subject with the following further information necessary to ensure fair and transparent processing:
+					<ol style="list-style-type: lower-alpha;">
+
+						<li>the period for which the personal data will be stored, or if that is not possible, the criteria used to determine that period;</li>
+						<li>the existence of the right to request from the controller access to and rectification or erasure of personal data or restriction of processing concerning the data subject or to object to processing as well as the right to data portability;</li>
+
+						<li>where the processing is based on point (a) of Article 6(1) or point (a) of Article 9(2), the existence of the right to withdraw consent at any time, without affecting the lawfulness of processing based on consent before its withdrawal;</li>
+
+						<li>the right to lodge a complaint with a supervisory authority;</li>
+
+						<li>whether the provision of personal data is a statutory or contractual requirement, or a requirement necessary to enter into a contract, as well as whether the data subject is obliged to provide the personal data and of the possible consequences of failure to provide such data;</li>
+
+						<li>the existence of automated decision-making, including profiling, referred to in Article 22(1) and (4) and, at least in those cases, meaningful information about the logic involved, as well as the significance and the envisaged consequences of such processing for the data subject.</li>
+					</ol>
+				<li>Where the controller intends to further process the personal data for a purpose other than that for which the personal data were collected, the controller shall provide the data subject prior to that further processing with information on that other purpose and with any relevant further information as referred to in paragraph 2.
+
+				<li>Paragraphs 1, 2 and 3 shall not apply where and insofar as the data subject already has the information.
+
+			</ol>
 		</div>
 
 <!-- ............. -->
@@ -1108,13 +1163,73 @@
 					</ol>
 				</li>
 			</ol>
-
-
 		</div>
 
 
 		<!-- Art. 14 ENG -->
-		<div id="eng-14" class="grid-item-eng" style="grid-row-start:15">			
+		<div id="eng-14" class="grid-item-eng" style="grid-row-start:15">
+			<h2>Article 14 &mdash; Information to be provided where personal data have not been obtained from the data subject</h2>	
+
+			<ol>
+				<li>Where personal data have not been obtained from the data subject, the controller shall provide the data subject with the following information:
+					<ol style="list-style-type: lower-alpha;">
+						<li>the identity and the contact details of the controller and, where applicable, of the controller's representative;</li>
+
+						<li>the contact details of the data protection officer, where applicable;</li>
+
+						<li>the purposes of the processing for which the personal data are intended as well as the legal basis for the processing;</li>
+
+						<li>the categories of personal data concerned;</li>
+
+						<li>the recipients or categories of recipients of the personal data, if any;</li>
+
+						<li>where applicable, that the controller intends to transfer personal data to a recipient in a third country or international organisation and the existence or absence of an adequacy decision by the Commission, or in the case of transfers referred to in Article 46 or 47, or the second subparagraph of Article 49(1), reference to the appropriate or suitable safeguards and the means to obtain a copy of them or where they have been made available.</li>
+				</ol>
+			</li>
+			<li>In addition to the information referred to in paragraph 1, the controller shall provide the data subject with the following information necessary to ensure fair and transparent processing in respect of the data subject:
+				<ol style="list-style-type: lower-alpha;">
+					<li>the period for which the personal data will be stored, or if that is not possible, the criteria used to determine that period;</li>
+
+					<li>where the processing is based on point (f) of Article 6(1), the legitimate interests pursued by the controller or by a third party;</li>
+
+					<li>the existence of the right to request from the controller access to and rectification or erasure of personal data or restriction of processing concerning the data subject and to object to processing as well as the right to data portability;</li>
+
+					<li>where processing is based on point (a) of Article 6(1) or point (a) of Article 9(2), the existence of the right to withdraw consent at any time, without affecting the lawfulness of processing based on consent before its withdrawal;</li>
+
+					<li>the right to lodge a complaint with a supervisory authority;</li>
+
+					<li>from which source the personal data originate, and if applicable, whether it came from publicly accessible sources;</li>
+
+					<li>the existence of automated decision-making, including profiling, referred to in Article 22(1) and (4) and, at least in those cases, meaningful information about the logic involved, as well as the significance and the envisaged consequences of such processing for the data subject.</li>
+				</ol>
+			</li>
+
+			<li>The controller shall provide the information referred to in paragraphs 1 and 2:
+				<ol style="list-style-type: lower-alpha;">
+					<li>within a reasonable period after obtaining the personal data, but at the latest within one month, having regard to the specific circumstances in which the personal data are processed;</li>
+
+					<li>if the personal data are to be used for communication with the data subject, at the latest at the time of the first communication to that data subject; or</li>
+
+					<li>if a disclosure to another recipient is envisaged, at the latest when the personal data are first disclosed.</li>
+				</ol>
+			</li>
+
+			<li>Where the controller intends to further process the personal data for a purpose other than that for which the personal data were obtained, the controller shall provide the data subject prior to that further processing with information on that other purpose and with any relevant further information as referred to in paragraph 2.</li>
+
+			<li>Paragraphs 1 to 4 shall not apply where and insofar as:
+				<ol style="list-style-type: lower-alpha;">
+
+					<li>the data subject already has the information;</li>
+
+					<li>the provision of such information proves impossible or would involve a disproportionate effort, in particular for processing for archiving purposes in the public interest, scientific or historical research purposes or statistical purposes, subject to the conditions and safeguards referred to in Article 89(1) or in so far as the obligation referred to in paragraph 1 of this Article is likely to render impossible or seriously impair the achievement of the objectives of that processing. In such cases the controller shall take appropriate measures to protect the data subject's rights and freedoms and legitimate interests, including making the information publicly available;</li>
+
+					<li>obtaining or disclosure is expressly laid down by Union or Member State law to which the controller is subject and which provides appropriate measures to protect the data subject's legitimate interests; or</li>
+
+					<li>where the personal data must remain confidential subject to an obligation of professional secrecy regulated by Union or Member State law, including a statutory obligation of secrecy.</li>
+				</ol>
+
+			</li>
+		</ol>	
 		</div>
 
 <!-- ............. -->
@@ -1149,7 +1264,35 @@
 
 
 		<!-- Art. 15 ENG -->
-		<div id="eng-15" class="grid-item-eng" style="grid-row-start:16">			
+		<div id="eng-15" class="grid-item-eng" style="grid-row-start:16">
+			<h2>Article 15 &mdash; Right of access by the data subject</h2>
+			<ol>
+				<li>1.  The data subject shall have the right to obtain from the controller confirmation as to whether or not personal data concerning him or her are being processed, and, where that is the case, access to the personal data and the following information:
+					<ol style="list-style-type: lower-alpha;">
+						<li>the purposes of the processing;</li>
+
+						<li>the categories of personal data concerned;</li>
+
+						<li>the recipients or categories of recipient to whom the personal data have been or will be disclosed, in particular recipients in third countries or international organisations;</li>
+
+						<li>where possible, the envisaged period for which the personal data will be stored, or, if not possible, the criteria used to determine that period;</li>
+
+						<li>the existence of the right to request from the controller rectification or erasure of personal data or restriction of processing of personal data concerning the data subject or to object to such processing;</li>
+
+						<li>the right to lodge a complaint with a supervisory authority;</li>
+
+						<li>where the personal data are not collected from the data subject, any available information as to their source;</li>
+
+						<li>the existence of automated decision-making, including profiling, referred to in Article 22(1) and (4) and, at least in those cases, meaningful information about the logic involved, as well as the significance and the envisaged consequences of such processing for the data subject.</li>
+					</ol>
+				</li>
+
+				<li>Where personal data are transferred to a third country or to an international organisation, the data subject shall have the right to be informed of the appropriate safeguards pursuant to Article 46 relating to the transfer.</li>
+
+				<li>The controller shall provide a copy of the personal data undergoing processing. For any further copies requested by the data subject, the controller may charge a reasonable fee based on administrative costs. Where the data subject makes the request by electronic means, and unless otherwise requested by the data subject, the information shall be provided in a commonly used electronic form.</li>
+
+				<li>The right to obtain a copy referred to in paragraph 3 shall not adversely affect the rights and freedoms of others.</li>
+			</ol>
 		</div>
 
 <!-- ............. -->
@@ -1162,8 +1305,11 @@
 
 
 		<!-- Art. 16 ENG -->
-		<div id="eng-16" class="grid-item-eng" style="grid-row-start:17">			
+		<div id="eng-16" class="grid-item-eng" style="grid-row-start:17">	
+			<h2>Article 16 &mdash; Right to rectification</h2>		
+			<p>The data subject shall have the right to obtain from the controller without undue delay the rectification of inaccurate personal data concerning him or her. Taking into account the purposes of the processing, the data subject shall have the right to have incomplete personal data completed, including by means of providing a supplementary statement.</p>
 		</div>
+
 
 <!-- ............. -->
 		<!-- art 17 ITA -->
